Fixed pop-ups z-index

--- a/app/assets/stylesheets/_questionnaire.css.sass
+++ b/app/assets/stylesheets/_questionnaire.css.sass
@@ -4,7 +4,7 @@
   width: 100%
   bottom: 0
   left: 0
-  z-index: 100
+  z-index: 98
   background:
     image: image-url("questionnaire_t_y.png")
     repeat: no-repeat
