--- a/app/assets/stylesheets/_topbar.css.sass
+++ b/app/assets/stylesheets/_topbar.css.sass
@@ -1,3 +1,6 @@
+.fixed
+  z-index: 98
+
 .contain-to-grid
   +box-shadow(0 0 3px 0 rgba(0,0,0,.5), inset 0 1px 0 0 #FFF89C)
 
