--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -995,7 +995,7 @@ $progress-bar-margin-bottom: emCalc(16);
 
 // We use these to control the style of the reveal overlay.
 
-// $reveal-overlay-bg: rgba(#000, .45);
+$reveal-overlay-bg: rgba(#000, .75);
 // $reveal-overlay-bg-old: #000;
 
 // We use these to control the style of the modal itself.
